--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,8 +60,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  assets: []
-    # - assets/images/sabanci_logo.jpeg
+  assets: 
+     - lib/common/assets/sabanci_logo.jpeg
 
 
   # To add assets to your application, add an assets section, like this:
