--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,24 @@ flutter:
   uses-material-design: true
   assets: 
      - lib/common/assets/sabanci_logo.jpeg
+     - lib/common/assets/fonts/
+
+  fonts:
+     - family: SplashFont
+       fonts:
+         - asset: lib/common/assets/fonts/Orbitron-Bold.ttf
+           weight: 400
+
+     - family: AppFont
+       fonts:
+         - asset: lib/common/assets/fonts/Poppins-Regular.ttf
+           weight: 400
+         - asset: lib/common/assets/fonts/Poppins-Medium.ttf
+           weight: 500
+         - asset: lib/common/assets/fonts/Poppins-SemiBold.ttf
+           weight: 600
+         - asset: lib/common/assets/fonts/Poppins-Bold.ttf
+           weight: 700
 
 
   # To add assets to your application, add an assets section, like this:
