--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   go_router: ^16.3.0
   intl: ^0.20.2
   url_launcher: ^6.3.0
+  firebase_core: ^2.25.4
+  firebase_auth: ^4.17.8
+  cloud_firestore: ^4.15.8
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
